--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 
-<!-- Hi Rocco! -->
+<!-- Im mani -->
   <head>
     <meta charset="utf-8">
     <title></title>
