--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div class="layout">
       <header class="branding">
-        <h1 class="logo">Chat Company</h1>
+        <h1 class="logo">Thalk & Walk</h1>
       </header>
       <aside class="others open" id="others">
         <div class="panel">
