input box created

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
           <!-- Message articles goes here -->
         </section>
         <footer>
-          <!-- New msg <form> goes here -->
+          <form>
+          <textarea class="textarea"></textarea>  
+          </form>
+          <input type="button" class="button" value="Send">
         </footer>
       </main>
     </div>
