Sharing new code

--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
         </header>
         <section id="messages">
           <!-- Message articles goes here -->
-        </section>
+          <article class="message from-them" >
+            <h1>Username</h1>
+            <p>Message 1 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit laudantium laborum, vero.</p>
+        </article>
+        <article class="message from-me" >
+            <h1>Username</h1>
+            <p>Message 1 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit laudantium laborum, vero.</p>
+        </article>
         <footer>
           <!-- New msg <form> goes here -->
         </footer>
